get users rework based on next page link (hook, state, register). File overflow. Fixes.

--- a/src/scss/User/User.scss
+++ b/src/scss/User/User.scss
@@ -39,11 +39,9 @@
   &__name {
     margin-bottom: 10px;
     line-height: 30px;
-    text-overflow: ellipsis;
-    overflow: hidden;
     font-size: 24px;
     font-weight: 400;
-    width: 100% !important;
+    white-space: normal!important;
   }
 
   &__position,
@@ -56,12 +54,8 @@
   }
 
   &__email {
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
     position: relative;
     line-height: 125%;
-    width: 100% !important;
     font-size: 16px;
     margin-bottom: 7px;
   }
